--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "babel-preset-react": "^6.23.0",
+    "babel-preset-react-native": "^1.9.1",
     "enzyme": "^2.2.0",
     "isparta-loader": "^2.0.0",
     "jasmine-ajax": "^3.2.0",
@@ -28,6 +29,7 @@
     "karma-webpack": "^1.7.0",
     "phantomjs-prebuilt": "^2.1.7",
     "react-addons-test-utils": "^15.0.2",
+    "react-native-dotenv": "0.0.3",
     "redux-devtools": "^3.2.0"
   },
   "dependencies": {
@@ -36,6 +38,7 @@
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "dotenv": "^4.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^4.4.5",
