--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   "license": "ISC",
   "devDependencies": {
     "babel-preset-react": "^6.23.0",
-    "babel-preset-react-native": "^1.9.1",
     "enzyme": "^2.2.0",
+    "eslint": "^3.15.0",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-promise": "^3.4.1",
+    "eslint-plugin-react": "^6.9.0",
+    "eslint-plugin-standard": "^2.0.1",
     "isparta-loader": "^2.0.0",
     "jasmine-ajax": "^3.2.0",
     "jasmine-core": "^2.4.1",
@@ -29,7 +33,6 @@
     "karma-webpack": "^1.7.0",
     "phantomjs-prebuilt": "^2.1.7",
     "react-addons-test-utils": "^15.0.2",
-    "react-native-dotenv": "0.0.3",
     "redux-devtools": "^3.2.0"
   },
   "dependencies": {
